# django-alexa

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  Pipfile  README.rst  make.bat  pypi_readme.md  readthedocs.yml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
django_alexa/: __init__.py  alexa.py  apps.py  fields.py  serializers.py  urls.py  views.py
django_alexa/api/: __init__.py  exceptions.py  fields.py  intents_schema.py  response_builder.py  validation.py
django_alexa/internal/: __init__.py  fields.py  intents_schema.py  response_builder.py  validation.py
django_alexa/management/: base.py
django_alexa/management/commands/: alexa.py  alexa_custom_slots.py  alexa_intents.py  alexa_utterances.py
django_alexa_tests/: test_django_alexa.py
django_alexa_tests/internal_tests/: test_response_builder.py  test_responsebuilder.py  test_validation.py
docs/source/: about-django-alexa.rst  conf.py  index.rst
