[bdist_wheel]
universal=1

[flake8]
max-line-length=88
ignore = E121,E122,E123,E124,E125,E126,E127,E128,E129,E131,E501,E701
exclude = django_alexa_tests/*
format = pylint

[metadata]
name = django-alexa
author = Kyle Rockman
author_email = kyle.rockman@mac.com
summary = Amazon Alexa Skills Kit integration for Django
url = https://github.com/rocktavious/django-alexa
home-page = https://github.com/pycontribs/django-alexa
description-file = README.rst
license-file = LICENSE
classifiers =
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3 :: Only

[files]
packages =
    django_alexa

[pbr]
warnerrors = True
